# In-Memory-NoSQL-DB

./: .gitattributes  .gitignore  BoolValue.hpp  CMakeLists.txt  Database.hpp  DoubleValue.hpp  IValue.hpp  IntValue.hpp  ListValue.hpp  README.md  StringValue.hpp  dump.db  main.cpp  tests.cpp
